Ignore CVE-2017-1000487 for now.

--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <suppressionFile>dependency-check-suppress.xml</suppressionFile>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
